tests/suite/snapshots/suite__parse__tests__parse__group-of-anonymous01-19-4.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/group-of-anonymous01-19-4.xi:2:3]
   │
 2 │   return(a);
   ·   ───┬──  
   ·      ╰──── Unexpected token
───╯

